# bloc

./: .dockerignore  .gitignore  .justfile  .vampus.yml  Dockerfile
back/: .gitignore  Cargo.toml
back/migrations/: 20250413045459_users.up.sql  20250413050802_values.up.sql  20250420055143_topics.up.sql  20250420055154_tags.up.sql  20250420055310_posts.up.sql  20250420055334_posts_tags.up.sql  20250420060603_comments.up.sql  20251105183308_init.down.sql  20251106183122_settings.down.sql  20251106183122_settings.up.sql  20251113045459_users.up.sql  20251120055310_posts.down.sql  20251120055310_posts.up.sql  20251123053035_comments.down.sql  20251123053035_comments.up.sql  20251123053039_tags.down.sql  20251123053039_tags.up.sql  20251123053502_posts_tags.down.sql  20251123053502_posts_tags.up.sql
back/src/: constants.rs  main.rs  utils.rs
back/src/http/: comment.rs  health.rs  mod.rs  post.rs  tag.rs  topic.rs  upload.rs  user.rs  value.rs
back/src/models/: class.rs  comment.rs  data.rs  mod.rs  post.rs  response.rs  settings.rs  tag.rs  topic.rs  user.rs  value.rs
back/static/home/: index.html
back/static/share/: script.js  styles.css
back/templates/: base.html  blog_index.html  post.html
front/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
front/src/: App.css  App.tsx  constants.ts  index.css  main.tsx
front/src/common/: constants.ts  types.ts  utils.ts
front/src/components/: admin_header_context.tsx  auth_context.tsx  custom_editor.css  custom_editor.tsx  custom_table.tsx  mode_context.tsx  nav_bar_admin.tsx  nav_bar_protected.tsx  nav_bar_public.tsx  sidebar.tsx  signin.tsx  tab_panel.tsx
front/src/components/descriptors/: youtube_descriptor.tsx
front/src/components/dialogs/: custom_dialog.tsx
front/src/components/editor/: custom_editor.css  custom_editor.tsx
front/src/components/embeds/: youtube_embed.tsx
front/src/layouts/: admin_layout.tsx  auth_layout.tsx  protected_layout.tsx  public_layout.tsx  role_admin_layout.tsx
front/src/models/: class.ts  comment.ts  post.ts  tag.ts
front/src/pages/admin/: comment.ts  dashboard_page.tsx  editor.css  editor_page.tsx  logout_page.tsx  post_page.tsx  posts_page.tsx  tags_page.tsx  topics_page.tsx
front/src/pages/admin/templates/: blog.tsx
front/src/pages/auth/: login_page.tsx
front/src/pages/public/: editor_page.tsx  home_page.tsx  login_page.tsx  post_page.css  post_page.tsx  posts_page.tsx
front/src/styles/: code_mirror_override.css
