[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "json"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
cookie = "0.18.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "macros", "chrono", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full", "time"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing", "env-filter", "local-time"] }

[dev-dependencies]
dotenv = "0.15.0"
