[package]
name = "back"
version = "0.1.2"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "json"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
cookie = "0.18.1"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "chrono", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing", "env-filter", "local-time"] }

[dev-dependencies]
dotenv = "0.15.0"
