[package]
name = "back"
version = "0.1.13"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "json", "multipart"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
comrak = "0.48.0"
cookie = "0.18.1"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
md_to_text = "0.0.0"
mime-type = "0.2.0"
mime2ext = "0.1.54"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "chrono", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing", "env-filter", "local-time"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15.0"
